@@ -236,7 +236,7 @@ CREATE TABLE `#__contact_details` (
   PRIMARY KEY  (`id`),
   KEY `idx_access` (`access`),
   KEY `idx_checkout` (`checked_out`),
-  KEY `idx_state` (`state`),
+  KEY `idx_state` (`published`),
   KEY `idx_catid` (`catid`),
   KEY `idx_createdby` (`created_by`),
   KEY `idx_featured_catid` (`featured`,`catid`),
